--- a/archivos css/scss/estilos.scss
+++ b/archivos css/scss/estilos.scss
@@ -134,3 +134,17 @@ hr {
     padding-right: 2%;
     font-size:1.3rem;
 }
+.mainAsaide{
+    display: grid;
+    grid-template-columns: 13% 87%;
+    grid-template-rows: auto;
+    grid-template-areas: "asaide menu";
+    .asaidePrincipal{
+    grid-area: asaide;
+    background-color:#D8E3E7;
+    border-right: 1px solid;
+    }
+    .anilloUno{
+        grid-area: menu;
+    }
+}
